--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -1,7 +1,7 @@
 <div class="user-all-products-container">
   <div class="title">
     <i class="fi fi-sr-flame"></i>
-    <div class="main-title" style="text-transform:uppercase"><b>Toàn bộ sản phẩm nè</b></div>
+    <div class="main-title"><b>Toàn bộ sản phẩm nè</b></div>
   </div>
 
   <div class="all-category-skincare"></div>
@@ -36,7 +36,7 @@
     </div>
 
     <div>
-      <p id="clear-filter">Xoá bộ lọc</p>
+      <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
     </div>
   </div>
 
