--- a/src/public/css/user/detailProduct.css
+++ b/src/public/css/user/detailProduct.css
@@ -8,132 +8,117 @@
   padding: 10px 0;
   gap: 10px;
   .table {
-    width: 90%;
-    height: fit-content ;
+    width: 95%;
+    height: fit-content;
     background-color: white;
     border-radius: 10px;
     display: flex;
     align-items: center;
-  }
-  .image-box {
-    display: flex;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-    .thumbnails {
-      border-radius: 5px;
-      width: 50px;
-      height: 90%;
-      margin-left: 10px;
-      display: grid;
-      img {
-        max-width: 100%;
-        aspect-ratio: 1/1;
-        border-radius: 5px;
-        cursor: pointer;
-        border: 1px solid white;
-      }
-      img:hover {
-        border: 1px solid red;
-      }
-    }
-    .image {
-      border-radius: 5px;
-      width: 400px;
-      aspect-ratio: 1/1;
-      margin-left: 20px;
-      img {
-        max-width: 100%;
-        aspect-ratio: 1/1;
-        border-radius: 5px;
-      }
-    }
-  }
-  .details-box {
-    width: 50%;
-    height: 100%;
-    margin: 10px;
-    .product-title {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: start;
-      gap: 5px;
-      h1, h3, h4 {
-        width: fit-content;
-        margin-block-start: 0;
-        margin-block-end: 0;
-        padding: 5px 0;
-      }
-      h1 {
-        color: #c73030;
-      }
-      #product-price, #product-quantity {
-        background-color: #FFDFDF;
-        padding: 5px;
-        width: fit-content;
-        border-radius: 5px;
-        font-weight: bolder;
-      }
-    }
-    .description {
-      width: 100%;
-      height: 40%;
-      text-overflow: ellipsis; 
-      overflow: hidden;
-      word-wrap: break-word;
-    }
-    .quantity {
+    .image-box {
       display: flex;
       align-items: center;
-      justify-content: start;
-      width: 90%;
-      gap: 10px;
-      padding: 5px 10px;
-      margin-bottom: 5px;
-      p {
-        margin-block-start: 0px;
-        margin-block-end: 0px;
-        border: 1px solid #D1A6A6;
-        padding: 10px
-      };
-      i { cursor: pointer }
+      width: 50%;
+      height: 100%;
+      .image {
+        border-radius: 5px;
+        width: 400px;
+        aspect-ratio: 1/1;
+        margin-left: 20px;
+        img {
+          max-width: 100%;
+          aspect-ratio: 1/1;
+          border-radius: 5px;
+        }
+      }
     }
-    .button {
-      display: flex;
-      align-items: center;
-      justify-content: start;
-      gap: 5px;
-      a { text-decoration: none }
-      .add-to-cart, .buy-now, .out-of-order {
+    .details-box {
+      width: 50%;
+      height: 100%;
+      margin: 10px;
+      .product-title {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        gap: 5px;
+        h1, h3, h4, h5 {
+          width: fit-content;
+          margin-block-start: 0;
+          margin-block-end: 0;
+          padding: 5px 0;
+        }
+        h1 {
+          color: #c73030;
+        }
+        #product-price, #product-quantity {
+          background-color: #FFDFDF;
+          padding: 5px;
+          width: fit-content;
+          border-radius: 5px;
+          font-weight: bolder;
+        }
+      }
+      .description {
+        width: 100%;
+        height: 40%;
+        text-overflow: ellipsis; 
+        overflow: hidden;
+        word-wrap: break-word;
+      }
+      .quantity {
         display: flex;
         align-items: center;
-        justify-content: center;
-        width: fit-content;
-        height: 30px;
-        border-radius: 5px;
-        padding: 15px;
-      };
-      .add-to-cart, .buy-now {
-        border: 1px solid #D1A6A6;
-        p, a { color: #D1A6A6; text-decoration: none; font-weight: bold; }
+        justify-content: start;
+        width: 90%;
+        gap: 10px;
+        padding: 5px 10px;
+        margin-bottom: 5px;
+        p {
+          margin-block-start: 0px;
+          margin-block-end: 0px;
+          border: 1px solid #D1A6A6;
+          padding: 10px
+        };
+        i { cursor: pointer }
       }
-      .out-of-order {
-        display: none;
-        background-color: red;
-        color: white;
-      }
-      div:hover {
-        cursor: pointer;
+      .button {
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap: 5px;
+        a { text-decoration: none }
+        .add-to-cart, .buy-now, .out-of-order {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: fit-content;
+          height: 30px;
+          border-radius: 5px;
+          padding: 15px;
+        };
+        .add-to-cart, .buy-now {
+          border: 1px solid #D1A6A6;
+          p, a { color: #D1A6A6; text-decoration: none; font-weight: bold; }
+        }
+        .out-of-order {
+          display: none;
+          background-color: red;
+          color: white;
+        }
+        div:hover {
+          cursor: pointer;
+        }
       }
     }
   }
   .more-details {
-    width: 90%;
+    width: 95%;
     background-color: white;
     border-radius: 10px;
     align-items: center;
     white-space: pre-line;
+    padding: 0 15px;
+    box-sizing: border-box;
     h3 {
       padding: 5px;
       margin-block-start: 0;
@@ -142,15 +127,45 @@
       align-items: center;
       justify-content: center;
     }
-    p {
-      padding: 0px 15px;
+  }
+  .rating-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    box-sizing: border-box;
+    i {color: orange;}
+    .rating-score {
+      width: 30%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 5px;
+      h1 {
+        font-size: xx-large;
+        color: #D1A6A6;
+      }
+    }
+    .rating-detail-score {
+      width: 70%;
+      div {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        #rating-border, #rating-progress {
+          display: inline-block;
+          border-radius: 99px;
+          height: 15px;
+        }
+        #rating-border { width: 50%; background-color: #eee};
+      }
     }
   }
-  .comment-list {
+  
+  .comment-box {
     padding: 5px;
     box-sizing: border-box;
     .comment {
-      border: 1px solid #FFDFDF;
       border-radius: 10px;
       padding: 5px;
       box-sizing: border-box;
@@ -158,7 +173,6 @@
       p {
         margin-block-start: 0;
         margin-block-end: 0;
-        margin-bottom: 10px;
         padding: 5px;
       }
       #sender {
@@ -171,8 +185,9 @@
     }
   }
   .related-products {
-    width: 90%;
+    width: 95%;
     overflow: hidden;
+    .products {padding: 5px 0;}
   }
 }
 @media screen and (max-width: 700px) {
