--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -1,9 +1,20 @@
 <div class="flash-deal-board">
   <div class="title" data-tippy-content="Xem toàn bộ sản phẩm đang sale">
     <i class="fi fi-sr-flame"></i>
-    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-products/flash-sale" class="main-title"><b>FLASH DEAL</b></a>
-    </h1>
+    <div><a href="/all-products/flash-sale" class="main-title"><b>TOP SẢN PHẨM FLASH DEAL</b></a></div>
+  </div>
+  
+  <div class="products">
+    {{#each (checkStatus products 'flash-sale' 5)}}
+      {{> product}}
+    {{/each}}
+  </div>
+</div>
+
+<div class="hot-products-board">
+  <div class="title" data-tippy-content="Xem toàn bộ sản phẩm bán chạy">
+    <i class="fi fi-sr-flame"></i>
+    <div><a href="/all-products?saleNumber=desc" class="main-title"><b>TOP SẢN PHẨM BÁN CHẠY</b></a></div>
   </div>
   
   <div class="products">
@@ -16,9 +27,7 @@
 <div class="hot-products-board">
   <div class="title" data-tippy-content="Xem toàn bộ sản phẩm đang hot">
     <i class="fi fi-sr-flame"></i>
-    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-products/hot" class="main-title"><b>SẢN PHẨM HOT</b></a>
-    </h1>
+    <div><a href="/all-products/hot" class="main-title"><b>TOP SẢN PHẨM HOT</b></a></div>
   </div>
   
   <div class="products">
@@ -31,9 +40,7 @@
 <div class="content-board">
   <div class="title" data-tippy-content="Xem toàn bộ sản phẩm">
     <i class="fi fi-sr-flame"></i>
-    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-products" class="main-title"><b>TOÀN BỘ SẢN PHẨM</b></a>
-    </h1>
+    <div><a href="/all-products" class="main-title"><b>TOÀN BỘ SẢN PHẨM</b></a></div>
   </div>
 
   <div class="products">
@@ -46,9 +53,7 @@
 <div class="famous-brand-board">
   <div class="title" data-tippy-content="Xem toàn bộ thương hiệu">
     <i class="fi fi-sr-flame"></i>
-    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-brands" class="main-title"><b>THƯƠNG HIỆU NỔI BẬT</b></a>
-    </h1>
+    <div><a href="/all-brands" class="main-title"><b>TOP THƯƠNG HIỆU NỔI BẬT</b></a></div>
   </div>
 
   <div class="brands">
