--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -1,3 +1,7 @@
+<div class="advertise-board">
+  {{> userAdvertise}}
+</div>
+
 <div class="flash-deal-board">
   <div class="title" data-tippy-content="Xem toàn bộ sản phẩm đang sale">
     <i class="fi fi-sr-flame"></i>
