--- a/src/public/css/user/allProducts.css
+++ b/src/public/css/user/allProducts.css
@@ -4,24 +4,92 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .filter {
+  .sort, .filter {
     width: 100%;
     max-width: 1300px;
     display: flex;
     align-items: center;
     justify-content: start;
-    gap: 20px;
+    gap: 5px;
+    padding: 5px;
+    box-sizing: border-box;
+    label {
+      width: 10%;
+      display: flex;
+      justify-content: end;
+    }
+    select, option {
+      width: fit-content;
+      height: 40px;
+      border: 1px solid #D1A6A6;
+      border-radius: 5px;
+      padding-left: 5px;
+      cursor: pointer;
+    }
+    select:focus {
+      outline: 1.5px solid #D1A6A6
+    }
   }
-  select, option {
-    width: fit-content;
-    height: 40px;
-    border: 1px solid #D1A6A6;
-    border-radius: 5px;
-    padding-left: 5px;
-    cursor: pointer;
-  }
-  select:focus {
-    outline: 1.5px solid #D1A6A6
+  .filter {
+    .range-slide {
+      position: relative;
+      height: 4px;
+      width: 240px;
+    }
+    .slide {
+      position: absolute;
+      top: 0;
+      height: 4px;
+      background: #ccc;
+      left: 9px;
+      right: 9px;
+    }
+    .line {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      height: 4px;
+      background-color: #eee;
+    }
+    .thumb {
+      position: absolute;
+      z-index: 2;
+      text-align: left;
+      background-color: #D1A6A6;
+      border-radius: 50%;
+      outline: none;
+      top: -7px;
+      height: 18px;
+      width: 18px;
+      margin-left: -9px;
+    }
+    input {
+      -webkit-appearance: none;
+      appearance: none;
+      position: absolute;
+      pointer-events: none;
+      z-index: 3;
+      height: 3px;
+      top: 0;
+      width: 100%;
+      opacity: 0;
+      margin: 0;
+    }
+    input::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      pointer-events: all;
+      border-radius: 50%;
+      cursor: pointer;
+      width: 18px;
+      height: 18px;
+    }
+    .display {
+      width: 240px;
+      display: flex;
+      justify-content: space-between;
+    }
   }
   .all-category-skincare, .all-category-makeup {
     padding: 10px;
