--- a/src/public/css/user/fixedComponents.css
+++ b/src/public/css/user/fixedComponents.css
@@ -1,39 +1,4 @@
-.dropup {
-  display: inline-block;
-  margin-left: auto;
-  margin-right: 0;
-  bottom: 70px;
-  right: 5px;
-  position: fixed;
-  span {
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    animation: ring 1.5s infinite;
-    i { font-size: 50px; color: #e17640 };
-  }
-  .dropup-content {
-    display: none;
-    position: absolute;
-    width: 50px;
-    z-index: 1;
-    bottom: 60px;
-    .content {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      padding-bottom: 10px;
-      img { width: 30px }
-    };
-  }
-}
-.dropup:hover .dropup-content {
-  display: block;
-}
-.chat-icon {
+.scroll-to-top-icon, .contact-icon, .chat-icon {
   display: inline-block;
   margin-left: auto;
   margin-right: 0;
@@ -47,6 +12,27 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   animation: ring 1.5s infinite;
   i { font-size: 50px; color: #e17640 };
+}
+.scroll-to-top-icon {bottom: 130px}
+.contact-icon {bottom: 70px}
+.chat-icon {bottom: 10px}
+.dropup {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: 0;
+  bottom: 70px;
+  right: 5px;
+  position: fixed;
+  /* display: none; */
+  position: absolute;
+  width: 50px;
+  z-index: 1;
+  bottom: 60px;
+  right: 5px;
+  img { width: 30px }
+}
+.contact-icon:hover .dropup-content {
+  display: block;
 }
 .chat-box {
   background-color: white;
