--- a/src/public/css/user/home.css
+++ b/src/public/css/user/home.css
@@ -7,7 +7,7 @@
   margin-top: 10px;
 }
 .flash-deal-board {
-  background: linear-gradient(rgb(248, 62, 96), rgb(254, 80, 72));
+  background: linear-gradient(168.12deg, #ffb0a4 0%, #ff6b7f 100%);;
   border-radius: 10px;
   i.fi-sr-flame, a {
     animation: bling 1s infinite
