--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -1,21 +1,10 @@
-<div class="dropup">
-  <span>
-    <i class="fi fi-sr-circle-phone-flip"></i>
-  </span>
-  <div class="dropup-content">
-    <div class="content">
-      <a target="_blank" href="https://www.facebook.com/bunnylylyyy"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="loading" loading="lazy"/></a>
-    </div>               
-    <div class="content">
-      <a target="_blank" href="https://www.instagram.com/bunnyhouse.__/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/225px-Instagram_logo_2022.svg.png" alt="loading" loading="lazy"/></a>
-    </div>               
-    <div class="content"><img src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-Zalo-Arc.png" alt="loading" style="width: 30px;" loading="lazy"/>
-    </div> 
-  </div>              
-</div>
+<div class="scroll-to-top-icon"><i class="fi fi-sr-angle-circle-up"></i></div>
+<div class="contact-icon"><i class="fi fi-sr-circle-phone-flip"></i></div>
+<div class="chat-icon"><i class="fi fi-sr-comment-quote"></i></div>
 
-<div class="chat-icon" data-tippy-content="Chat với mình luôn nhé">
-  <i class="fi fi-sr-comment-quote"></i>
+<div class="dropup">
+  <a target="_blank" href="https://www.facebook.com/bunnylylyyy"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="loading" loading="lazy"/></a>               
+  <a target="_blank" href="https://www.instagram.com/bunnyhouse.__/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/225px-Instagram_logo_2022.svg.png" alt="loading" loading="lazy"/></a>
 </div>
 
 <div class="chat-box" style="display: none">
