--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -7,37 +7,46 @@
   <div class="all-category-skincare"></div>
   <div class="all-category-makeup"></div>
 
+  <div class="sort">
+    <label for="price">Sắp xếp theo:</label>
+    <select id="price" class="filter-btn">
+      <option value="">Giá mặc định</option>
+      <option value="asc">Giá tăng dần</option>
+      <option value="desc">Giá giảm dần</option>
+    </select>
+
+    <select id="rate" class="filter-btn">
+      <option value="">Đánh giá mặc định</option>
+      <option value="asc">Đánh giá tăng dần</option>
+      <option value="desc">Đánh giá giảm dần</option>
+    </select>
+
+    <select id="saleNumber" class="filter-btn">
+      <option value="">Lượng bán mặc định</option>
+      <option value="asc">Lượng bán tăng dần</option>
+      <option value="desc">Lượng bán giảm dần</option>
+    </select>
+
+    <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
+  </div>
+
   <div class="filter">
-    <div>
-      <label for="price">Giá bán</label>
-      <select id="price" class="filter-btn">
-        <option value="">Sắp xếp theo</option>
-        <option value="asc">Tăng dần</option>
-        <option value="desc">Giảm dần</option>
-      </select>
+    <label for="price">Khoảng giá</label>
+    <div class="range-slide">
+      <div class="slide">
+        <div class="line" id="line" style="left: 0%; right: 0%;"></div>
+        <span class="thumb" id="thumbMin" style="left: 0%;"></span>
+        <span class="thumb" id="thumbMax" style="left: 100%;"></span>
+      </div>
+      <input id="rangeMin" type="range" max="100" min="10" step="5" value="0">
+      <input id="rangeMax" type="range" max="100" min="10" step="5" value="10000000">
+    </div>
+    <div class="display">
+      <span id="min">10</span>
+      <span id="max">100</span>
     </div>
 
-    <div>
-      <label for="rate">Đánh giá</label>
-      <select id="rate" class="filter-btn">
-        <option value="">Sắp xếp theo</option>
-        <option value="asc">Tăng dần</option>
-        <option value="desc">Giảm dần</option>
-      </select>
-    </div>
-    
-    <div>
-      <label for="saleNumber">Lượng bán</label>
-      <select id="saleNumber" class="filter-btn">
-        <option value="">Sắp xếp theo</option>
-        <option value="asc">Tăng dần</option>
-        <option value="desc">Giảm dần</option>
-      </select>
-    </div>
-
-    <div>
-      <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
-    </div>
+    <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
   </div>
 
   <div class="products">
