--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #FFDFDF;
-  top: 80px;
+  top: 0;
   left: 0;
   display: flex;
   align-items: center;
