--- a/src/resource/views/users/searchInfo.hbs
+++ b/src/resource/views/users/searchInfo.hbs
@@ -1,6 +1,6 @@
 <div class="user-all-products-container">
   <div class="title">
-    <div class="main-title" style="text-transform:uppercase"><b>Kết quả tìm kiếm</b></div>
+    <div class="main-title" style="text-transform:uppercase"><b>Kết quả tìm kiếm: "{{query}}"</b></div>
   </div>
 
   <div class="products">
