--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -21,7 +21,7 @@ body::-webkit-scrollbar {display: none}
   height: 100vh;
   background-color: #FFDFDF;
   top: 0;
-  left: 200px;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
