--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -1,8 +1,8 @@
-<div class="scroll-to-top-icon"><i class="fi fi-sr-angle-circle-up"></i></div>
+<div class="scroll-to-top-icon" style="display: none;"><i class="fi fi-sr-angle-circle-up"></i></div>
 <div class="contact-icon"><i class="fi fi-sr-circle-phone-flip"></i></div>
 <div class="chat-icon"><i class="fi fi-sr-comment-quote"></i></div>
 
-<div class="dropup">
+<div class="dropup" style="display: none">
   <a target="_blank" href="https://www.facebook.com/bunnylylyyy"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="loading" loading="lazy"/></a>               
   <a target="_blank" href="https://www.instagram.com/bunnyhouse.__/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/225px-Instagram_logo_2022.svg.png" alt="loading" loading="lazy"/></a>
 </div>
