--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<script defer>
-  var index = `{{index}}`;
+<script>
+  var index = '{{index}}'
 </script>
-<script src="/js/partials/adminSidebar.js" defer></script>
+<script src="/js/partials/adminSidebar.js"></script>
