--- a/src/public/css/user/home.css
+++ b/src/public/css/user/home.css
@@ -35,8 +35,9 @@
     display: flex;
     align-items: center;
     border-radius: 5px;
-    padding: 10px;
+    padding: 15px;
     background-color: white;
+    box-sizing: border-box;
     img {
       height: 50px;
     }
