--- a/src/public/css/user/profile.css
+++ b/src/public/css/user/profile.css
@@ -1,12 +1,12 @@
 .user-update-profile-container {
   display: flex;
-  padding: 20px;
-  justify-content: space-around;
+  gap: 20px;
   .sidebar-menu {
-    width: 20%;
+    width: 200px;
     background-color: white;
     border-radius: 10px;
     padding: 10px 0;
+    height: fit-content;
     .avatar {
       display: flex;
       align-items: center;
@@ -33,14 +33,15 @@
         border-radius: 5px;
         padding: 5px 10px;
         box-sizing: border-box;
+        border: 1px solid white;
       }
       a:hover {
-        background-color: #FFDFDF;
+        border: 1px solid #FFDFDF;
       }
     }
   }
   .content {
-    width: 70%;
+    width: calc(100vw - 220px);
     background-color: white;
     border-radius: 10px;
     padding: 10px;
