--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -24,7 +24,7 @@
     <h3 style="color: #D1A6A6;"></h3>
   </div>
   <header>{{> userHeader}}</header>
-  <main style="margin-top: 80px; margin-bottom: 50px">{{{body}}}</main>
+  <main>{{{body}}}</main>
   <div>{{> fixedComponents}}</div>
   <footer>{{> userFooter}}</footer>
 </body>
