--- a/src/resource/views/users/profileFeedback.hbs
+++ b/src/resource/views/users/profileFeedback.hbs
@@ -1,16 +1,5 @@
 <div class="user-update-profile-container">
-    <div class="sidebar-menu">
-      <div class="avatar">
-        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="{{userInfo.userInfo.name}}" loading="lazy">
-        <span>{{userInfo.userInfo.name}}</span>
-      </div>
-      <div class="tag">
-        <a href="/profile/info"><i class="fi fi-br-circle-user"></i>Thông tin cá nhân</a>
-        <a href="/profile/order"><i class="fi fi-rr-piggy-bank"></i>Thông tin đơn hàng</a>
-        <a href="/profile/rate-order"><i class="fi fi-rr-piggy-bank"></i>Đánh giá đơn hàng</a>
-        <a href="/profile/feedback"><i class="fi fi-rr-feedback-alt"></i>Góp ý</a>
-      </div>
-    </div>
+    {{> userSidebar}}
 
     <div class="content">
       <p>Góp ý</p>
@@ -30,6 +19,6 @@
     </div>
 </div>   
 
-<script defer>
+<script>
   loadFile('/js/user/profileFeedback.js')
 </script>
