--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -16,6 +16,10 @@
     </a>
   </div>
 
+  <div>
+    <input type="text" placeholder="Tìm kiếm khách hàng">
+  </div>
+
   <div class="table">
     <table class="all-items">
       <thead>
