--- a/src/resource/views/admin/detail/purchase.hbs
+++ b/src/resource/views/admin/detail/purchase.hbs
@@ -14,15 +14,15 @@
       </tr>
       <tr>
         <td>NCC</td>
-        <td>{{purchaseInfo.supplierInfo.name}}</td>
+        <td>{{supplierInfo.name}}</td>
       </tr>
       <tr>
         <td>SĐT</td>
-        <td>{{purchaseInfo.supplierInfo.phone}}</td>
+        <td>{{supplierInfo.phone}}</td>
       </tr>
       <tr>
         <td>Địa Chỉ</td>
-        <td>{{purchaseInfo.supplierInfo.address}}</td>
+        <td>{{supplierInfo.address}}</td>
       </tr>
       <tr>
         <td>Ghi Chú</td>
