--- a/src/resource/views/admin/create/product.hbs
+++ b/src/resource/views/admin/create/product.hbs
@@ -85,18 +85,9 @@
       <select name="status">
         <option value="no">-- Tình Trạng Sản Phẩm --</option>
         <option value="no">Bình thường</option>
-        <option value="flash-sale">Đang Flash Sale</option>
-        <option value="hot">Đang hot</option>
-        <option value="out-of-order">Hết Hàng</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <label></label>
-      <select name="newArrival">
-        <option value="no">-- Hàng Mới Về --</option>
-        <option value="no">Không</option>
-        <option value="yes">Chuẩn luôn, mới về</option>
+        <option value="flash-sale">Flash Sale</option>
+        <option value="hot">Hot</option>
+        <option value="new-arrival">Mới về</option>
       </select>
     </div>
 
