--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -18,7 +18,7 @@
 <div class="hot-products-board">
   <div class="title" data-tippy-content="Xem toàn bộ sản phẩm bán chạy">
     <i class="fi fi-sr-flame"></i>
-    <div><a href="/all-products?saleNumber=desc" class="main-title"><b>TOP SẢN PHẨM BÁN CHẠY</b></a></div>
+    <div><a href="/all-products?saleNumber=-1" class="main-title"><b>TOP SẢN PHẨM BÁN CHẠY</b></a></div>
   </div>
   
   <div class="products">
