--- a/src/resource/views/users/profileInfo.hbs
+++ b/src/resource/views/users/profileInfo.hbs
@@ -57,7 +57,7 @@
 </div>   
 
 <script>
-  var gender = '{{userInfo.userInfo.gender}}'
-  var successful = '{{successful}}'
+  var gender = `{{userInfo.userInfo.gender}}`
+  var successful = `{{successful}}`
   loadFile('/js/user/profileInfo.js')
 </script>
