--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -35,7 +35,7 @@
 </div>
 
 <script>
-  var error = '{{error}}'
-  var successful = '{{successful}}'
+  var error = `{{error}}`
+  var successful = `{{successful}}`
   loadFile('/js/user/signIn.js')
 </script>
