--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -11,20 +11,20 @@
     <label for="price">Sắp xếp theo:</label>
     <select id="price" class="filter-btn">
       <option value="">Giá mặc định</option>
-      <option value="asc">Giá tăng dần</option>
-      <option value="desc">Giá giảm dần</option>
+      <option value="1">Giá tăng dần</option>
+      <option value="-1">Giá giảm dần</option>
     </select>
 
     <select id="rate" class="filter-btn">
       <option value="">Đánh giá mặc định</option>
-      <option value="asc">Đánh giá tăng dần</option>
-      <option value="desc">Đánh giá giảm dần</option>
+      <option value="1">Đánh giá tăng dần</option>
+      <option value="-1">Đánh giá giảm dần</option>
     </select>
 
     <select id="saleNumber" class="filter-btn">
       <option value="">Lượng bán mặc định</option>
-      <option value="asc">Lượng bán tăng dần</option>
-      <option value="desc">Lượng bán giảm dần</option>
+      <option value="1">Lượng bán tăng dần</option>
+      <option value="-1">Lượng bán giảm dần</option>
     </select>
 
     <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
