--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -47,7 +47,8 @@ input[type="text"], input[type="password"], input[type="date"] {
   text-indent: 10px;
   height: 40px;
   border-radius: 5px;
-  border: 1px solid #D1A6A6
+  border: 1px solid #D1A6A6;
+  box-sizing: border-box;
 }
 input:focus {
   outline: 1.5px solid #D1A6A6
@@ -82,25 +83,27 @@ button:hover {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   height: 100px;
   p {
     font-size: 30px;
     text-transform: uppercase;
     font-weight: bolder;
     border: 2px solid #D1A6A6;
+    border-radius: 10px;
     padding: 20px;
   }
 }
-.filter-and-create {
+div.filter-and-create {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  .filter {
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #D1A6A6;
-  }
+  padding: 5px 10px;
+  background-color: white;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
   .create-btn {
     display: flex;
     align-items: center;
@@ -160,8 +163,8 @@ table {
   }
 }
 div.table {
-  overflow-x: auto;
-  padding: 10px 0;
+  /* overflow-x: auto; */
+  padding: 5px 10px;
   table.all-items {
     background-color: #F0F0F0;
     tbody {
