--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -1,23 +1,60 @@
 <div class="admin-all-orders-container">  
   <div class="board-title">
-    <p>Tổng Đơn Hàng: {{totalOrder}}</p>
+    <p>Đơn Hàng: {{totalOrder}}</p>
   </div>
-
+  
   <div class="filter-and-create">
-    <select class="filter">
-      <option value="">Toàn bộ</option>
-      <option value="preparing">Đang xử lý</option>
-      <option value="delivering">Đang giao</option>
-      <option value="done">Đã hoàn thành</option>
-    </select>
+    <div class="sort">
+      <label for="price">Sắp xếp theo:</label>
+      <select id="price" class="filter-btn">
+        <option value="">Giá mặc định</option>
+        <option value="1">Giá tăng dần</option>
+        <option value="-1">Giá giảm dần</option>
+      </select>
+
+      <select id="rate" class="filter-btn">
+        <option value="">Đánh giá mặc định</option>
+        <option value="1">Đánh giá tăng dần</option>
+        <option value="-1">Đánh giá giảm dần</option>
+      </select>
+
+      <select id="saleNumber" class="filter-btn">
+        <option value="">Lượng bán mặc định</option>
+        <option value="1">Lượng bán tăng dần</option>
+        <option value="-1">Lượng bán giảm dần</option>
+      </select>
+    </div>
+
+    <div class="filter">
+      <label for="price">Lọc theo:</label>
+      <select id="price" class="filter-btn">
+        <option value="">Giá mặc định</option>
+        <option value="1">Giá tăng dần</option>
+        <option value="-1">Giá giảm dần</option>
+      </select>
+
+      <select id="rate" class="filter-btn">
+        <option value="">Đánh giá mặc định</option>
+        <option value="1">Đánh giá tăng dần</option>
+        <option value="-1">Đánh giá giảm dần</option>
+      </select>
+
+      <select id="saleNumber" class="filter-btn">
+        <option value="">Lượng bán mặc định</option>
+        <option value="1">Lượng bán tăng dần</option>
+        <option value="-1">Lượng bán giảm dần</option>
+      </select>
+    </div>
+    <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
 
     <a href="/admin/all-orders/order/create" class="create-btn" id="create-btn">
-      <i class="fi fi-rr-user-add"></i>
+      <i class="fi fi-rr-plus"></i>
       <p>Thêm Đơn Hàng</p>
     </a>
   </div>
 
   <div class="table">
+    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
     <table class="all-items">
       <thead>
         <tr>
