--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -4,19 +4,37 @@
   </div>
 
   <div class="filter-and-create">
-    <select class="filter">
-      <option value="">Toàn bộ</option>
-      <option value=""></option>
-      <option value=""></option>
-    </select>
+    <div class="sort">
+      <label for="price">Sắp xếp theo:</label>
+      <select id="price" class="filter-btn">
+        <option value="">Giá mặc định</option>
+        <option value="1">Giá tăng dần</option>
+        <option value="-1">Giá giảm dần</option>
+      </select>
+
+      <select id="rate" class="filter-btn">
+        <option value="">Đánh giá mặc định</option>
+        <option value="1">Đánh giá tăng dần</option>
+        <option value="-1">Đánh giá giảm dần</option>
+      </select>
+
+      <select id="saleNumber" class="filter-btn">
+        <option value="">Lượng bán mặc định</option>
+        <option value="1">Lượng bán tăng dần</option>
+        <option value="-1">Lượng bán giảm dần</option>
+      </select>
+
+      <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
+    </div>
 
     <a href="/admin/all-suppliers/supplier/create" class="create-btn" id="create-btn">
-      <i class="fi fi-rr-user-add"></i>
+      <i class="fi fi-rr-plus"></i>
       <p>Thêm Đối tác</p>
     </a>
   </div>
 
   <div class="table">
+    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
     <table class="all-items">
       <thead>
         <tr>
