--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -8,21 +8,21 @@
   <div class="all-category-makeup"></div>
 
   <div class="sort">
-    <label for="price">Sắp xếp theo:</label>
+    <label>Sắp xếp theo:</label>
     <select id="price" class="filter-btn">
-      <option value="">Giá mặc định</option>
+      <option value="">Giá</option>
       <option value="1">Giá tăng dần</option>
       <option value="-1">Giá giảm dần</option>
     </select>
 
     <select id="rate" class="filter-btn">
-      <option value="">Đánh giá mặc định</option>
+      <option value="">Đánh giá</option>
       <option value="1">Đánh giá tăng dần</option>
       <option value="-1">Đánh giá giảm dần</option>
     </select>
 
     <select id="saleNumber" class="filter-btn">
-      <option value="">Lượng bán mặc định</option>
+      <option value="">Lượng bán</option>
       <option value="1">Lượng bán tăng dần</option>
       <option value="-1">Lượng bán giảm dần</option>
     </select>
@@ -31,7 +31,7 @@
   </div>
 
   <div class="filter">
-    <label for="price">Khoảng giá</label>
+    <label>Khoảng giá</label>
     <div class="range-slide">
       <div class="slide">
         <div class="line" id="line" style="left: 0%; right: 0%;"></div>
