--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -1,40 +1,30 @@
 <div class="admin-all-stores-container">  
   <div class="board-title">
-    <p>Tổng cửa hàng: {{totalStore}}</p>
+    <p>Cửa hàng: {{totalStore}}</p>
   </div>
 
-  <div class="filter-and-create">
-    <div class="sort">
-      <label for="price">Sắp xếp theo:</label>
-      <select id="price" class="filter-btn">
-        <option value="">Giá mặc định</option>
-        <option value="1">Giá tăng dần</option>
-        <option value="-1">Giá giảm dần</option>
-      </select>
-
-      <select id="rate" class="filter-btn">
-        <option value="">Đánh giá mặc định</option>
-        <option value="1">Đánh giá tăng dần</option>
-        <option value="-1">Đánh giá giảm dần</option>
-      </select>
-
-      <select id="saleNumber" class="filter-btn">
-        <option value="">Lượng bán mặc định</option>
-        <option value="1">Lượng bán tăng dần</option>
-        <option value="-1">Lượng bán giảm dần</option>
-      </select>
+  <div class="control-bar">
+    <div class="filter-and-create">
+      <div class="sort">
+        <label>Sắp xếp theo:</label>
+        <select id="revenue" class="filter-btn">
+          <option value="">Doanh thu mặc định</option>
+          <option value="1">Doanh thu tăng dần</option>
+          <option value="-1">Doanh thu giảm dần</option>
+        </select>
+      </div>
 
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
-    </div>
 
-    <a href="/admin/all-stores/store/create" class="create-btn" id="create-btn">
-      <i class="fi fi-rr-plus"></i>
-      <p>Thêm Cửa Hàng</p>
-    </a>
+      <a href="/admin/all-stores/store/create" class="create-btn" id="create-btn">
+        <i class="fi fi-rr-plus"></i>
+        <p>Thêm Cửa Hàng</p>
+      </a>
+    </div>
+    <input type="text" id="search-input" placeholder="Tìm kiếm cửa hàng">
   </div>
 
   <div class="table">
-    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
     <table class="all-items">
       <thead>
         <tr>
