--- a/src/resource/views/admin/create/employee.hbs
+++ b/src/resource/views/admin/create/employee.hbs
@@ -19,7 +19,7 @@
       <select name="storeId">
         <option value="">-- Chọn cửa hàng làm việc --</option>
         {{#each stores}}
-          <option value="{{this._id}}">{{this.name}}</option>
+          <option value="{{this.code}}">{{this.name}}</option>
         {{/each}}
       </select>
     </div>
