--- a/src/resource/views/admin/create/product.hbs
+++ b/src/resource/views/admin/create/product.hbs
@@ -83,7 +83,7 @@
     <div class="form-group">
       <label></label>
       <select name="status">
-        <option value="no">-- Tình Trạng Sản Phẩm --</option>
+        <option value="">-- Tình Trạng Sản Phẩm --</option>
         <option value="no">Bình thường</option>
         <option value="flash-sale">Flash Sale</option>
         <option value="hot">Hot</option>
