--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -59,21 +59,14 @@
         <td><input type="text" id="details" name="details" value="{{productInfo.details}}"></td>
       </tr>
       <tr>
-        <td>Độ hot</td>
+        <td>Tình trạng sản phẩm</td>
         <td>
           <select name="status" id="status">
             <option value="no">Bình thường</option>
             <option value="flash-sale">Đang Flash Sale</option>
             <option value="hot">Đang hot</option>
-          </select>
-        </td>
-      </tr>
-      <tr>
-        <td>Độ mới</td>
-        <td>
-          <select name="newArrival" id="newArrival">
-            <option value="no">Ra lâu rồi</option>
-            <option value="yes">Chuẩn luôn</option>
+            <option value="new-arrival">Mới ra</option>
+            <option value="out-of-order">Đang hot</option>
           </select>
         </td>
       </tr>
