--- a/src/resource/views/users/profileInfo.hbs
+++ b/src/resource/views/users/profileInfo.hbs
@@ -45,6 +45,11 @@
         <label for="address">Tổng chi tiêu</label>
         <input type="text" id="revenue" name="revenue" value="{{userInfo.revenue}}" disabled>
       </div>
+
+      <div class="form-group">
+        <label for="member">Hạng thành viên</label>
+        <input type="text" id="member" name="member" value="{{userInfo.member}}" disabled>
+      </div>
       
       <div class="form-group">
         <label for="address">Ngày tạo tài khoản</label>
