--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -1,7 +1,11 @@
 @import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
 /* all pages */
-main {margin-left: 200px}
+main {
+  margin-left: 200px;
+  padding: 5px;
+  box-sizing: border-box;
+}
 body {
   background-color: #FFDFDF;
   font-family: 'Roboto', sans-serif;
@@ -94,32 +98,34 @@ button:hover {
     padding: 20px;
   }
 }
-div.filter-and-create {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 5px 10px;
-  background-color: white;
+div.control-bar {
+  background-color: #F0F0F0;
   padding: 10px;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
-  .create-btn {
+  .filter-and-create {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: black;
-    text-decoration: none;
-    gap: 5px;
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #D1A6A6;
-    padding: 10px;
-    p {
-      margin-block-start: 0;
-      margin-block-end: 0;
-    }
-  } 
+    padding: 5px 10px;
+    .create-btn {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: black;
+      text-decoration: none;
+      gap: 5px;
+      background-color: white;
+      border-radius: 5px;
+      border: 1px solid #D1A6A6;
+      padding: 10px;
+      p {
+        margin-block-start: 0;
+        margin-block-end: 0;
+      }
+    } 
+  }
 }
 table {
   width: 100%;
@@ -164,9 +170,10 @@ table {
 }
 div.table {
   /* overflow-x: auto; */
-  padding: 5px 10px;
+  margin-top: 20px;
   table.all-items {
     background-color: #F0F0F0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
     tbody {
       tr {
         background-color: white;
