--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -1,19 +1,59 @@
 <div class="admin-all-brands-container">  
   <div class="board-title">
-    <p>Tổng Thương hiệu: {{totalBrand}}</p>
+    <p>Thương hiệu: {{totalBrand}}</p>
   </div>
 
-  <div class="filter-and-create">
-    <select class="filter">
-      <option value="">Toàn bộ</option>
-      <option value=""></option>
-      <option value=""></option>
-    </select>
+  <div class="control-bar">
+    <div class="filter-and-create">
+      <div class="sort">
+        <label>Sắp xếp theo:</label>
+        <select id="price" class="filter-btn">
+          <option value="">Giá mặc định</option>
+          <option value="1">Giá tăng dần</option>
+          <option value="-1">Giá giảm dần</option>
+        </select>
 
-    <a href="/admin/all-brands/brand/create" class="create-btn" id="create-btn">
-      <i class="fi fi-br-layer-plus"></i>
-      <p>Thêm thương hiệu</p>
-    </a>
+        <select id="rate" class="filter-btn">
+          <option value="">Đánh giá mặc định</option>
+          <option value="1">Đánh giá tăng dần</option>
+          <option value="-1">Đánh giá giảm dần</option>
+        </select>
+
+        <select id="saleNumber" class="filter-btn">
+          <option value="">Lượng bán mặc định</option>
+          <option value="1">Lượng bán tăng dần</option>
+          <option value="-1">Lượng bán giảm dần</option>
+        </select>
+      </div>
+
+      <div class="filter">
+        <label>Lọc theo:</label>
+        <select id="price" class="filter-btn">
+          <option value="">Giá mặc định</option>
+          <option value="1">Giá tăng dần</option>
+          <option value="-1">Giá giảm dần</option>
+        </select>
+
+        <select id="rate" class="filter-btn">
+          <option value="">Đánh giá mặc định</option>
+          <option value="1">Đánh giá tăng dần</option>
+          <option value="-1">Đánh giá giảm dần</option>
+        </select>
+
+        <select id="saleNumber" class="filter-btn">
+          <option value="">Lượng bán mặc định</option>
+          <option value="1">Lượng bán tăng dần</option>
+          <option value="-1">Lượng bán giảm dần</option>
+        </select>
+      </div>
+      <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
+
+      <a href="/admin/all-orders/order/create" class="create-btn" id="create-btn">
+        <i class="fi fi-rr-plus"></i>
+        <p>Thêm Đơn Hàng</p>
+      </a>
+    </div>
+    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
   </div>
 
   <div class="table">
