--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -1,44 +1,61 @@
 <div class="admin-all-customers-container">  
   <div class="board-title">
-    <p>Tổng Khách Hàng: {{totalCustomer}}</p>
+    <p>Khách Hàng: {{totalCustomer}}</p>
   </div>
 
-  <div class="filter-and-create">
-    <div class="sort">
-      <label for="quantity">Sắp xếp theo:</label>
-      <select id="quantity" class="filter-btn">
-        <option value="">Đơn hàng</option>
-        <option value="1">Đơn hàng tăng dần</option>
-        <option value="-1">Đơn hàng giảm dần</option>
-      </select>
+  <div class="control-bar">
+    <div class="filter-and-create">
+      <div class="sort">
+        <label>Sắp xếp theo:</label>
+        <select id="revenue" class="filter-btn">
+          <option value="">Doanh thu </option>
+          <option value="1">Doanh thu tăng dần</option>
+          <option value="-1">Doanh thu giảm dần</option>
+        </select>
 
-      <select id="revenue" class="filter-btn">
-        <option value="">Doanh thu</option>
-        <option value="1">Doanh thu tăng dần</option>
-        <option value="-1">Doanh thu giảm dần</option>
-      </select>
+        <select id="quantity" class="filter-btn">
+          <option value="">Đơn hàng</option>
+          <option value="1">Đơn hàng tăng dần</option>
+          <option value="-1">Đơn hàng giảm dần</option>
+        </select>
+      </div>
 
+      <div class="filter">
+        <label>Lọc theo:</label>
+        <select id="gender" class="filter-btn">
+          <option value="">Giới tính</option>
+          <option value="male">Nam</option>
+          <option value="female">Nữ</option>
+        </select>
+
+        <select id="rate" class="filter-btn">
+          <option value="">Hạng thành viên</option>
+          {{#each members}}
+            <option value="{{this.code}}">{{this.name}}</option>
+          {{/each}}
+        </select>
+      </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
-    </div>
 
-    <a href="/admin/all-customers/customer/create" class="create-btn" id="create-btn">
-      <i class="fi fi-rr-plus"></i>
-      <p>Thêm Khách Hàng</p>
-    </a>
-  </div>  
+      <a href="/admin/all-customers/customer/create" class="create-btn" id="create-btn">
+        <i class="fi fi-rr-plus"></i>
+        <p>Thêm Khách Hàng</p>
+      </a>
+    </div>
+    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
+  </div> 
 
   <div class="table">
-    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
     <table class="all-items">
       <thead>
         <tr>
-          <td style="width: 5% ;">STT           </td>
-          <td style="width: 15%;">Mã Khách hàng </td>
-          <td style="width: 15%;">Tên Khách Hàng</td>
-          <td style="width: 25%;">Địa chỉ       </td>
-          <td style="width: 10%;">Tổng Đơn hàng </td>
-          <td style="width: 20%;">Tổng doanh thu</td>
-          <td style="width: 10%;">Chi tiết      </td>
+          <td style="width: 5% ">STT           </td>
+          <td style="width: 15%">Mã Khách hàng </td>
+          <td style="width: 15%">Tên Khách Hàng</td>
+          <td style="width: 25%">Địa chỉ       </td>
+          <td style="width: 10%">Tổng Đơn hàng </td>
+          <td style="width: 20%">Tổng doanh thu</td>
+          <td style="width: 10%">Chi tiết      </td>
         </tr>
       </thead>
 
