--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -1,40 +1,36 @@
 <div class="admin-all-purchases-container">  
   <div class="board-title">
-    <p>Tổng đơn nhập: {{totalPurchase}}</p>
+    <p>Đơn nhập: {{totalPurchase}}</p>
   </div>
 
-  <div class="filter-and-create">
-    <div class="sort">
-      <label for="price">Sắp xếp theo:</label>
-      <select id="price" class="filter-btn">
-        <option value="">Giá mặc định</option>
-        <option value="1">Giá tăng dần</option>
-        <option value="-1">Giá giảm dần</option>
-      </select>
+  <div class="control-bar">
+    <div class="filter-and-create">
+      <div class="sort">
+        <label>Sắp xếp theo:</label>
+        <select id="purchaseDate" class="filter-btn">
+          <option value="">Ngày đặt hàng</option>
+          <option value="1">Ngày tăng dần</option>
+          <option value="-1">Ngày giảm dần</option>
+        </select>
 
-      <select id="rate" class="filter-btn">
-        <option value="">Đánh giá mặc định</option>
-        <option value="1">Đánh giá tăng dần</option>
-        <option value="-1">Đánh giá giảm dần</option>
-      </select>
-
-      <select id="saleNumber" class="filter-btn">
-        <option value="">Lượng bán mặc định</option>
-        <option value="1">Lượng bán tăng dần</option>
-        <option value="-1">Lượng bán giảm dần</option>
-      </select>
+        <select id="totalPurchasePrice" class="filter-btn">
+          <option value="">Giá trị đơn mặc định</option>
+          <option value="1">Giá trị tăng dần</option>
+          <option value="-1">Giá trị giảm dần</option>
+        </select>
+      </div>
 
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
-    </div>
 
-    <a href="/admin/all-purchases/purchase/create" class="create-btn" id="create-btn">
-      <i class="fi fi-rr-plus"></i>
-      <p>Thêm Đơn Nhập</p>
-    </a>
+      <a href="/admin/all-purchases/purchase/create" class="create-btn" id="create-btn">
+        <i class="fi fi-rr-plus"></i>
+        <p>Thêm Đơn Nhập</p>
+      </a>
+    </div>
+    <input type="text" id="search-input" placeholder="Tìm kiếm đơn nhập">
   </div>
 
   <div class="table">
-    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
     <table class="all-items">
       <thead>
         <tr>
