--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -1,40 +1,62 @@
 <div class="admin-all-suppliers-container">  
   <div class="board-title">
-    <p>Tổng Đối Tác: {{totalSupplier}}</p>
+    <p>Đối Tác: {{totalSupplier}}</p>
   </div>
 
-  <div class="filter-and-create">
-    <div class="sort">
-      <label for="price">Sắp xếp theo:</label>
-      <select id="price" class="filter-btn">
-        <option value="">Giá mặc định</option>
-        <option value="1">Giá tăng dần</option>
-        <option value="-1">Giá giảm dần</option>
-      </select>
+  <div class="control-bar">
+    <div class="filter-and-create">
+      <div class="sort">
+        <label for="price">Sắp xếp theo:</label>
+        <select id="price" class="filter-btn">
+          <option value="">Giá mặc định</option>
+          <option value="1">Giá tăng dần</option>
+          <option value="-1">Giá giảm dần</option>
+        </select>
 
-      <select id="rate" class="filter-btn">
-        <option value="">Đánh giá mặc định</option>
-        <option value="1">Đánh giá tăng dần</option>
-        <option value="-1">Đánh giá giảm dần</option>
-      </select>
+        <select id="rate" class="filter-btn">
+          <option value="">Đánh giá mặc định</option>
+          <option value="1">Đánh giá tăng dần</option>
+          <option value="-1">Đánh giá giảm dần</option>
+        </select>
 
-      <select id="saleNumber" class="filter-btn">
-        <option value="">Lượng bán mặc định</option>
-        <option value="1">Lượng bán tăng dần</option>
-        <option value="-1">Lượng bán giảm dần</option>
-      </select>
+        <select id="saleNumber" class="filter-btn">
+          <option value="">Lượng bán mặc định</option>
+          <option value="1">Lượng bán tăng dần</option>
+          <option value="-1">Lượng bán giảm dần</option>
+        </select>
+      </div>
 
+      <div class="filter">
+        <label for="price">Lọc theo:</label>
+        <select id="price" class="filter-btn">
+          <option value="">Giá mặc định</option>
+          <option value="1">Giá tăng dần</option>
+          <option value="-1">Giá giảm dần</option>
+        </select>
+
+        <select id="rate" class="filter-btn">
+          <option value="">Đánh giá mặc định</option>
+          <option value="1">Đánh giá tăng dần</option>
+          <option value="-1">Đánh giá giảm dần</option>
+        </select>
+
+        <select id="saleNumber" class="filter-btn">
+          <option value="">Lượng bán mặc định</option>
+          <option value="1">Lượng bán tăng dần</option>
+          <option value="-1">Lượng bán giảm dần</option>
+        </select>
+      </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
-    </div>
 
-    <a href="/admin/all-suppliers/supplier/create" class="create-btn" id="create-btn">
-      <i class="fi fi-rr-plus"></i>
-      <p>Thêm Đối tác</p>
-    </a>
+      <a href="/admin/all-suppliers/supplier/create" class="create-btn" id="create-btn">
+        <i class="fi fi-rr-plus"></i>
+        <p>Thêm Nhà Cung Cấp</p>
+      </a>
+    </div>
+    <input type="text" id="search-input" placeholder="Tìm kiếm nhà cung cấp">
   </div>
 
   <div class="table">
-    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
     <table class="all-items">
       <thead>
         <tr>
