--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -30,8 +30,9 @@
       <label for="paymentMethod">Chọn phương thức thanh toán</label>
       <select name="paymentMethod" id="paymentMethod" required>
         <option value="" selected disabled>-- Phương thức thanh toán --</option>
-          <option value="cash">Tiền mặt</option>
-          <option value="transfer">Chuyển khoản</option>
+        {{#each paymentMethods}}
+          <option value="{{this.code}}">{{this.name}}</option>
+        {{/each}}
       </select>
     </div>
     <div class="form-group">
