--- a/src/resource/views/admin/detail/customer.hbs
+++ b/src/resource/views/admin/detail/customer.hbs
@@ -32,8 +32,16 @@
         </td>
       </tr>
       <tr>
-        <td>Tổng doanh thu</td>
+        <td>Tổng đơn hàng</td>
+        <td>{{customerInfo.quantity}}</td>
+      </tr>
+      <tr>
+        <td>Tổng chi tiêu</td>
         <td>{{formatNumber customerInfo.revenue}}</td>
+      </tr>
+      <tr>
+        <td>Hạng thành viên</td>
+        <td>{{memberInfo.name}}</td>
       </tr>
     </table>
 
@@ -56,7 +64,7 @@
           <td>{{addIndex @index 1}}</td>
           <td>{{formatNumber this.totalOrderPrice}}</td>
           <td>{{formatPaymentMethod this.paymentMethod}}</td>
-          <td>{{formatStatus this.status}}</td>
+          <td>{{this.orderStatus.name}}</td>
           <td><a href="/admin/all-orders/order/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
