--- a/src/resource/views/admin/create/employee.hbs
+++ b/src/resource/views/admin/create/employee.hbs
@@ -16,7 +16,7 @@
 
     <div class="form-group">
       <label></label>
-      <select name="storeId">
+      <select name="storeCode">
         <option value="">-- Chọn cửa hàng làm việc --</option>
         {{#each stores}}
           <option value="{{this.code}}">{{this.name}}</option>
