--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
   <link rel="stylesheet" href="/css/user/body.css">
   <link rel="stylesheet" href="/css/user/header.css">
+  <link rel="stylesheet" href="/css/user/fixedComponents.css">
   <link rel="stylesheet" href="/css/user/footer.css" media="print" onload="this.media='all'">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
