--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -22,17 +22,17 @@
 
       <div class="filter">
         <label>Lọc theo:</label>
-        <select id="position" class="filter-btn">
+        <select id="role" class="filter-btn">
           <option value="">Vị trí</option>
           {{#each positions}}
           <option value="{{this.code}}">{{this.name}}</option>
           {{/each}}
         </select>
 
-        <select id="store" class="filter-btn">
+        <select id="storeCode" class="filter-btn">
           <option value="">Cửa hàng</option>
           {{#each stores}}
-          <option value="{{this._id}}">{{this.name}}</option>
+          <option value="{{this.code}}">{{this.name}}</option>
           {{/each}}
         </select>
       </div>
@@ -65,10 +65,10 @@
           <tr>
             <td>{{addIndex @index 1}}</td>
             <td>{{this._id}}</td>
-            <td>{{this.userInfo.name}}</td>
-            <td>{{this.loginInfo.email}}</td>
-            <td>{{this.userInfo.address}}</td>
-            <td>{{formatRole this.loginInfo.role}}</td>
+            <td>{{this.name}}</td>
+            <td>{{this.email}}</td>
+            <td>{{this.address}}</td>
+            <td>{{formatRole this.role}}</td>
             <td><a href="/admin/all-employees/employee/{{this._id}}">Xem</a></td>
           </tr>
         {{/each}}
