--- a/src/resource/views/admin/all/product.hbs
+++ b/src/resource/views/admin/all/product.hbs
@@ -33,11 +33,11 @@
           <option value="skincare">Skincare</option>
           <option value="makeup">Makeup</option>
         </select>
-
-        <select id="rate" class="filter-btn">
-          <option value="">Trạng thái sản phẩm</option>
-          <option value="1">Đánh giá tăng dần</option>
-          <option value="-1">Đánh giá giảm dần</option>
+         <select id="brand" class="filter-btn">
+          <option value="">Thương hiệu</option>
+          {{#each brands}}
+          <option value="{{this.name}}">{{this.name}}</option>
+          {{/each}}
         </select>
       </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
@@ -56,11 +56,10 @@
         <tr>
           <td style="width:  5%">STT     </td>
           <td style="width: 10%">Hãng    </td>
-          <td style="width: 25%">Tên     </td>
-          <td style="width: 10%">Loại    </td>
+          <td style="width: 30%">Tên     </td>
           <td style="width: 15%">Giá nhập</td>
           <td style="width: 15%">Giá bán </td>
-          <td style="width: 10%">Số lượng</td>
+          <td style="width: 15%">Số lượng</td>
           <td style="width: 10%">Thao tác</td>
         </tr>
       </thead>
@@ -79,7 +78,6 @@
             <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
             <p>{{this.name}}</p>
           </td>  
-          <td>{{this.categories}}</td>
           <td>{{formatNumber this.purchasePrice}}</td>
           <td>{{formatNumber this.price}}</td>
           <td>{{this.quantity}}</td>
