--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -6,46 +6,20 @@
   <div class="control-bar">
     <div class="filter-and-create">
       <div class="sort">
-        <label for="price">Sắp xếp theo:</label>
-        <select id="price" class="filter-btn">
-          <option value="">Giá mặc định</option>
-          <option value="1">Giá tăng dần</option>
-          <option value="-1">Giá giảm dần</option>
+        <label>Sắp xếp theo:</label>
+        <select id="quantity" class="filter-btn">
+          <option value="">Số lượng đơn</option>
+          <option value="1">Số lượng đơn tăng dần</option>
+          <option value="-1">Số lượng đơn giảm dần</option>
         </select>
 
-        <select id="rate" class="filter-btn">
-          <option value="">Đánh giá mặc định</option>
-          <option value="1">Đánh giá tăng dần</option>
-          <option value="-1">Đánh giá giảm dần</option>
-        </select>
-
-        <select id="saleNumber" class="filter-btn">
-          <option value="">Lượng bán mặc định</option>
-          <option value="1">Lượng bán tăng dần</option>
-          <option value="-1">Lượng bán giảm dần</option>
+        <select id="totalCost" class="filter-btn">
+          <option value="">Tổng chi phí</option>
+          <option value="1">Tổng chi phí tăng dần</option>
+          <option value="-1">Tổng chi phí giảm dần</option>
         </select>
       </div>
 
-      <div class="filter">
-        <label for="price">Lọc theo:</label>
-        <select id="price" class="filter-btn">
-          <option value="">Giá mặc định</option>
-          <option value="1">Giá tăng dần</option>
-          <option value="-1">Giá giảm dần</option>
-        </select>
-
-        <select id="rate" class="filter-btn">
-          <option value="">Đánh giá mặc định</option>
-          <option value="1">Đánh giá tăng dần</option>
-          <option value="-1">Đánh giá giảm dần</option>
-        </select>
-
-        <select id="saleNumber" class="filter-btn">
-          <option value="">Lượng bán mặc định</option>
-          <option value="1">Lượng bán tăng dần</option>
-          <option value="-1">Lượng bán giảm dần</option>
-        </select>
-      </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
 
       <a href="/admin/all-suppliers/supplier/create" class="create-btn" id="create-btn">
